# leonardo-channels

./: .coveragerc  ChangeLog  MANIFEST.in  README.rst  setup.cfg
docs/source/: conf.py  index.rst
leonardo_channels/: __init__.py  auth.py  default_settings.py  models.py  router.py  routes.py  routing.py  settings.py  utils.py
leonardo_channels/consumers/: __init__.py  base.py
leonardo_channels/managers/: __init__.py  base.py  users.py
leonardo_channels/managers/backends/: base.py  cache.py
leonardo_channels/messages/: __init__.py  consumers.py  messages.py
leonardo_channels/senders/: __init__.py  base.py
leonardo_channels/signals/: consumers.py  reciever.py  routing.py
leonardo_channels/static/websocket/: client.js  reconnecting-websocket.js
leonardo_channels/widgets/: consumers.py  reciever.py  routing.py  utils.py
requirements/: default.txt  redis.txt
tests/: local_settings.py
