[metadata]
name = leonardo-channels
summary = Channels for Leonardo CMS.
description-file =
    README.rst
author = Michael Kuty
author-email = 6du1ro.n@gmail.com
home-page = https://github.com/leonardo-modules/leonardo-channels
classifier =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Application Frameworks

[files]
packages =
    leonardo_channels

[extras_require]
redis = -r requirements/redis.txt